src/ChefScriptParser.py
# Generated from grammar/ChefScript.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ChefScriptParser ( Parser ):

    grammarFileName = "ChefScript.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "';'", "'('", "')'", "','", "'{'", 
                     "'}'", "'*'", "'/'", "'+'", "'-'", "'>'", "'<'", "'>='", 
                     "'<='", "'same'", "'notSame'", "'mix'", "'either'", 
                     "'ew'", "'ingredient'", "'dish'", "'taste'", "'taste more'", 
                     "'else'", "'recipe'", "'serve'", "'stir'", "'true'", 
                     "'false'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "INGREDIENT", "DISH", "TASTE", "TASTE_MORE", 
                      "ELSE", "RECIPE", "SERVE", "STIR", "TRUE", "FALSE", 
                      "ID", "NUMBER", "STRING", "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_ingredientDeclaration = 2
    RULE_dishStatement = 3
    RULE_assignmentStatement = 4
    RULE_tasteStatement = 5
    RULE_tasteMoreBlock = 6
    RULE_functionDeclaration = 7
    RULE_functionCallStatement = 8
    RULE_functionCall = 9
    RULE_paramList = 10
    RULE_param = 11
    RULE_argumentList = 12
    RULE_stirStatement = 13
    RULE_serveStatement = 14
    RULE_block = 15
    RULE_expression = 16

    ruleNames =  [ "program", "statement", "ingredientDeclaration", "dishStatement", 
                   "assignmentStatement", "tasteStatement", "tasteMoreBlock", 
                   "functionDeclaration", "functionCallStatement", "functionCall", 
                   "paramList", "param", "argumentList", "stirStatement", 
                   "serveStatement", "block", "expression" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    INGREDIENT=21
    DISH=22
    TASTE=23
    TASTE_MORE=24
    ELSE=25
    RECIPE=26
    SERVE=27
    STIR=28
    TRUE=29
    FALSE=30
    ID=31
    NUMBER=32
    STRING=33
    WS=34

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ChefScriptParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ChefScriptParser.StatementContext)
            else:
                return self.getTypedRuleContext(ChefScriptParser.StatementContext,i)


        def getRuleIndex(self):
            return ChefScriptParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ChefScriptParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2631925760) != 0):
                self.state = 34
                self.statement()
                self.state = 39
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 40
            self.match(ChefScriptParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ingredientDeclaration(self):
            return self.getTypedRuleContext(ChefScriptParser.IngredientDeclarationContext,0)


        def dishStatement(self):
            return self.getTypedRuleContext(ChefScriptParser.DishStatementContext,0)


        def assignmentStatement(self):
            return self.getTypedRuleContext(ChefScriptParser.AssignmentStatementContext,0)


        def tasteStatement(self):
            return self.getTypedRuleContext(ChefScriptParser.TasteStatementContext,0)


        def functionDeclaration(self):
            return self.getTypedRuleContext(ChefScriptParser.FunctionDeclarationContext,0)


        def functionCallStatement(self):
            return self.getTypedRuleContext(ChefScriptParser.FunctionCallStatementContext,0)


        def stirStatement(self):
            return self.getTypedRuleContext(ChefScriptParser.StirStatementContext,0)


        def serveStatement(self):
            return self.getTypedRuleContext(ChefScriptParser.ServeStatementContext,0)


        def getRuleIndex(self):
            return ChefScriptParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = ChefScriptParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 50
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 42
                self.ingredientDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 43
                self.dishStatement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 44
                self.assignmentStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 45
                self.tasteStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 46
                self.functionDeclaration()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 47
                self.functionCallStatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 48
                self.stirStatement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 49
                self.serveStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IngredientDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INGREDIENT(self):
            return self.getToken(ChefScriptParser.INGREDIENT, 0)

        def ID(self):
            return self.getToken(ChefScriptParser.ID, 0)

        def expression(self):
            return self.getTypedRuleContext(ChefScriptParser.ExpressionContext,0)


        def getRuleIndex(self):
            return ChefScriptParser.RULE_ingredientDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIngredientDeclaration" ):
                listener.enterIngredientDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIngredientDeclaration" ):
                listener.exitIngredientDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIngredientDeclaration" ):
                return visitor.visitIngredientDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def ingredientDeclaration(self):

        localctx = ChefScriptParser.IngredientDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_ingredientDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(ChefScriptParser.INGREDIENT)
            self.state = 53
            self.match(ChefScriptParser.ID)
            self.state = 54
            self.match(ChefScriptParser.T__0)
            self.state = 55
            self.expression(0)
            self.state = 56
            self.match(ChefScriptParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DishStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DISH(self):
            return self.getToken(ChefScriptParser.DISH, 0)

        def expression(self):
            return self.getTypedRuleContext(ChefScriptParser.ExpressionContext,0)


        def getRuleIndex(self):
            return ChefScriptParser.RULE_dishStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDishStatement" ):
                listener.enterDishStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDishStatement" ):
                listener.exitDishStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDishStatement" ):
                return visitor.visitDishStatement(self)
            else:
                return visitor.visitChildren(self)




    def dishStatement(self):

        localctx = ChefScriptParser.DishStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_dishStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(ChefScriptParser.DISH)
            self.state = 59
            self.match(ChefScriptParser.T__2)
            self.state = 60
            self.expression(0)
            self.state = 61
            self.match(ChefScriptParser.T__3)
            self.state = 62
            self.match(ChefScriptParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ChefScriptParser.ID, 0)

        def expression(self):
            return self.getTypedRuleContext(ChefScriptParser.ExpressionContext,0)


        def getRuleIndex(self):
            return ChefScriptParser.RULE_assignmentStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignmentStatement" ):
                listener.enterAssignmentStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignmentStatement" ):
                listener.exitAssignmentStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignmentStatement" ):
                return visitor.visitAssignmentStatement(self)
            else:
                return visitor.visitChildren(self)




    def assignmentStatement(self):

        localctx = ChefScriptParser.AssignmentStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assignmentStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(ChefScriptParser.ID)
            self.state = 65
            self.match(ChefScriptParser.T__0)
            self.state = 66
            self.expression(0)
            self.state = 67
            self.match(ChefScriptParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TasteStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TASTE(self):
            return self.getToken(ChefScriptParser.TASTE, 0)

        def expression(self):
            return self.getTypedRuleContext(ChefScriptParser.ExpressionContext,0)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ChefScriptParser.BlockContext)
            else:
                return self.getTypedRuleContext(ChefScriptParser.BlockContext,i)


        def tasteMoreBlock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ChefScriptParser.TasteMoreBlockContext)
            else:
                return self.getTypedRuleContext(ChefScriptParser.TasteMoreBlockContext,i)


        def ELSE(self):
            return self.getToken(ChefScriptParser.ELSE, 0)

        def getRuleIndex(self):
            return ChefScriptParser.RULE_tasteStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTasteStatement" ):
                listener.enterTasteStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTasteStatement" ):
                listener.exitTasteStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTasteStatement" ):
                return visitor.visitTasteStatement(self)
            else:
                return visitor.visitChildren(self)




    def tasteStatement(self):

        localctx = ChefScriptParser.TasteStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_tasteStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(ChefScriptParser.TASTE)
            self.state = 70
            self.match(ChefScriptParser.T__2)
            self.state = 71
            self.expression(0)
            self.state = 72
            self.match(ChefScriptParser.T__3)
            self.state = 73
            self.block()
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==24:
                self.state = 74
                self.tasteMoreBlock()
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 82
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==25:
                self.state = 80
                self.match(ChefScriptParser.ELSE)
                self.state = 81
                self.block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TasteMoreBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TASTE_MORE(self):
            return self.getToken(ChefScriptParser.TASTE_MORE, 0)

        def expression(self):
            return self.getTypedRuleContext(ChefScriptParser.ExpressionContext,0)


        def block(self):
            return self.getTypedRuleContext(ChefScriptParser.BlockContext,0)


        def getRuleIndex(self):
            return ChefScriptParser.RULE_tasteMoreBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTasteMoreBlock" ):
                listener.enterTasteMoreBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTasteMoreBlock" ):
                listener.exitTasteMoreBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTasteMoreBlock" ):
                return visitor.visitTasteMoreBlock(self)
            else:
                return visitor.visitChildren(self)




    def tasteMoreBlock(self):

        localctx = ChefScriptParser.TasteMoreBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_tasteMoreBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(ChefScriptParser.TASTE_MORE)
            self.state = 85
            self.match(ChefScriptParser.T__2)
            self.state = 86
            self.expression(0)
            self.state = 87
            self.match(ChefScriptParser.T__3)
            self.state = 88
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RECIPE(self):
            return self.getToken(ChefScriptParser.RECIPE, 0)

        def ID(self):
            return self.getToken(ChefScriptParser.ID, 0)

        def block(self):
            return self.getTypedRuleContext(ChefScriptParser.BlockContext,0)


        def paramList(self):
            return self.getTypedRuleContext(ChefScriptParser.ParamListContext,0)


        def getRuleIndex(self):
            return ChefScriptParser.RULE_functionDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDeclaration" ):
                listener.enterFunctionDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDeclaration" ):
                listener.exitFunctionDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDeclaration" ):
                return visitor.visitFunctionDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def functionDeclaration(self):

        localctx = ChefScriptParser.FunctionDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_functionDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(ChefScriptParser.RECIPE)
            self.state = 91
            self.match(ChefScriptParser.ID)
            self.state = 92
            self.match(ChefScriptParser.T__2)
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==21:
                self.state = 93
                self.paramList()


            self.state = 96
            self.match(ChefScriptParser.T__3)
            self.state = 97
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionCallStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionCall(self):
            return self.getTypedRuleContext(ChefScriptParser.FunctionCallContext,0)


        def getRuleIndex(self):
            return ChefScriptParser.RULE_functionCallStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionCallStatement" ):
                listener.enterFunctionCallStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionCallStatement" ):
                listener.exitFunctionCallStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionCallStatement" ):
                return visitor.visitFunctionCallStatement(self)
            else:
                return visitor.visitChildren(self)




    def functionCallStatement(self):

        localctx = ChefScriptParser.FunctionCallStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_functionCallStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.functionCall()
            self.state = 100
            self.match(ChefScriptParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionCallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ChefScriptParser.ID, 0)

        def argumentList(self):
            return self.getTypedRuleContext(ChefScriptParser.ArgumentListContext,0)


        def getRuleIndex(self):
            return ChefScriptParser.RULE_functionCall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionCall" ):
                listener.enterFunctionCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionCall" ):
                listener.exitFunctionCall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionCall" ):
                return visitor.visitFunctionCall(self)
            else:
                return visitor.visitChildren(self)




    def functionCall(self):

        localctx = ChefScriptParser.FunctionCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_functionCall)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(ChefScriptParser.ID)
            self.state = 103
            self.match(ChefScriptParser.T__2)
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 16644046856) != 0):
                self.state = 104
                self.argumentList()


            self.state = 107
            self.match(ChefScriptParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ChefScriptParser.ParamContext)
            else:
                return self.getTypedRuleContext(ChefScriptParser.ParamContext,i)


        def getRuleIndex(self):
            return ChefScriptParser.RULE_paramList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamList" ):
                listener.enterParamList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamList" ):
                listener.exitParamList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamList" ):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)




    def paramList(self):

        localctx = ChefScriptParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.param()
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 110
                self.match(ChefScriptParser.T__4)
                self.state = 111
                self.param()
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INGREDIENT(self):
            return self.getToken(ChefScriptParser.INGREDIENT, 0)

        def ID(self):
            return self.getToken(ChefScriptParser.ID, 0)

        def getRuleIndex(self):
            return ChefScriptParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = ChefScriptParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(ChefScriptParser.INGREDIENT)
            self.state = 118
            self.match(ChefScriptParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ChefScriptParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ChefScriptParser.ExpressionContext,i)


        def getRuleIndex(self):
            return ChefScriptParser.RULE_argumentList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgumentList" ):
                listener.enterArgumentList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgumentList" ):
                listener.exitArgumentList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgumentList" ):
                return visitor.visitArgumentList(self)
            else:
                return visitor.visitChildren(self)




    def argumentList(self):

        localctx = ChefScriptParser.ArgumentListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_argumentList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.expression(0)
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 121
                self.match(ChefScriptParser.T__4)
                self.state = 122
                self.expression(0)
                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StirStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STIR(self):
            return self.getToken(ChefScriptParser.STIR, 0)

        def ingredientDeclaration(self):
            return self.getTypedRuleContext(ChefScriptParser.IngredientDeclarationContext,0)


        def expression(self):
            return self.getTypedRuleContext(ChefScriptParser.ExpressionContext,0)


        def assignmentStatement(self):
            return self.getTypedRuleContext(ChefScriptParser.AssignmentStatementContext,0)


        def block(self):
            return self.getTypedRuleContext(ChefScriptParser.BlockContext,0)


        def getRuleIndex(self):
            return ChefScriptParser.RULE_stirStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStirStatement" ):
                listener.enterStirStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStirStatement" ):
                listener.exitStirStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStirStatement" ):
                return visitor.visitStirStatement(self)
            else:
                return visitor.visitChildren(self)




    def stirStatement(self):

        localctx = ChefScriptParser.StirStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_stirStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(ChefScriptParser.STIR)
            self.state = 129
            self.match(ChefScriptParser.T__2)
            self.state = 130
            self.ingredientDeclaration()
            self.state = 131
            self.expression(0)
            self.state = 132
            self.match(ChefScriptParser.T__1)
            self.state = 133
            self.assignmentStatement()
            self.state = 134
            self.match(ChefScriptParser.T__3)
            self.state = 135
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ServeStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SERVE(self):
            return self.getToken(ChefScriptParser.SERVE, 0)

        def expression(self):
            return self.getTypedRuleContext(ChefScriptParser.ExpressionContext,0)


        def getRuleIndex(self):
            return ChefScriptParser.RULE_serveStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterServeStatement" ):
                listener.enterServeStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitServeStatement" ):
                listener.exitServeStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitServeStatement" ):
                return visitor.visitServeStatement(self)
            else:
                return visitor.visitChildren(self)




    def serveStatement(self):

        localctx = ChefScriptParser.ServeStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_serveStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(ChefScriptParser.SERVE)
            self.state = 138
            self.expression(0)
            self.state = 139
            self.match(ChefScriptParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'
